<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DynamicFeedReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Rss Feed Analyser</string>
    <string name="date">Sat 13 July 2015</string>
    <string name="image">No Image</string>
    <string name="description">This application is used to get feeds from different sources and display it as if you are seeing some list or something</string>
    <string name="imageDescription">Default Image</string>
    <string name="defaultImage">Default Image</string>
    <string name="refreshButton">Refresh</string>
    <string name="wallpaperButton">Set Wallpaper</string>
    <string name="rssList">list</string>
    <string name="imageDownload">Fetch Image</string>
    <string name="ApplicationNam">DynamicFeedReader</string>
    <string name="back">Back</string>
    <string name="appName">DynamicFeedReader</string>
    <string name="RssMainImage">Image Not Found</string>
    <string name="RssListHeading">Medium Text</string>
    <string name="RssListDate">Small Text</string>
    <string name="Add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_add_rss">AddRssActivity</string>
    <string name="read_original_feed">Orignial Feed</string>
</resources>
