<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#3db7c2ff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title"
                android:background="#26d3bae5"
                android:id="@+id/title"
                android:layout_weight="0.04" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:background="#26d3bae5"
                android:id="@+id/date"
                android:layout_weight="0.04" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image"
                android:background="#26d3bae5"
                android:contentDescription="@string/imageDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="#26d3bae5"
                android:text="@string/description"
                android:id="@+id/description"
                android:nestedScrollingEnabled="false" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_original_feed"
                android:onClick="webViewDisplay"
                android:id="@+id/button" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:layout_weight="0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:textColor="@color/abc_input_method_navigation_guard"
            android:gravity="center"
            android:onClick="onCancel"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageDownload"
            android:onClick="downloadImage"
            android:id="@+id/downloadImage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallpaperButton"
            android:id="@+id/wallpaper"
            android:gravity="center"
            android:onClick="setWallPaper"
            android:visibility="invisible"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</LinearLayout>